--- a/CharmeX_v03/app/src/main/res/layout/fragment_meu_perfil_editar.xml
+++ b/CharmeX_v03/app/src/main/res/layout/fragment_meu_perfil_editar.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".TelaPrincipal">
 
-    <include layout="@layout/content_meu_perfil"/>
+    <include layout="@layout/content_meu_perfil_editar" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabEditar"
+        android:id="@+id/fabSalvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -18,6 +18,6 @@
         android:tint="@color/corBranco"
         app:backgroundTint="@color/corRosa"
         app:fabSize="normal"
-        app:srcCompat="@drawable/ic_editar01" />
+        app:srcCompat="@drawable/ic_check_black_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
