--- a/CharmeX_v03/app/src/main/res/layout/activity_tela_cadastro.xml
+++ b/CharmeX_v03/app/src/main/res/layout/activity_tela_cadastro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TelaCadastro">
+    tools:context=".login.TelaCadastro">
 
     <include layout="@layout/content_tela_cadastro" />
 
