--- a/CharmeX_v03/app/src/main/res/layout/activity_tela_principal.xml
+++ b/CharmeX_v03/app/src/main/res/layout/activity_tela_principal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.atomicfourtech.charmex_v02.TelaPrincipal">
+    tools:context="com.atomicfourtech.charmex_v02.home.TelaPrincipal">
 
     <FrameLayout
         android:id="@+id/fragment_container"
