--- a/CharmeX_v03/app/src/main/res/layout/activity_tela_splash.xml
+++ b/CharmeX_v03/app/src/main/res/layout/activity_tela_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/corPreto"
-    tools:context=".TelaSplash">
+    tools:context=".outrasactivities.TelaSplash">
 
     <ImageView
         android:id="@+id/imgLogoSplash"
