--- a/CharmeX_v03/app/src/main/res/layout/fragment_home.xml
+++ b/CharmeX_v03/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/corBranco">
+    tools:context=".home.TelaPrincipal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:text="Home Fragment"
-        android:textSize="30sp" />
+    <include layout="@layout/content_home"/>
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
