Upgrade: Criação --ParentFragment Perfil da Empresa (que contém os Fragments Serviços, Promoções e Informações. Update em layouts.

--- a/CharmeX_v03/app/src/main/res/layout/activity_tela_esqueci_minha_senha.xml
+++ b/CharmeX_v03/app/src/main/res/layout/activity_tela_esqueci_minha_senha.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".login.TelaEsqueciMinhaSenha">
 
-    <include layout="@layout/content_tela_esqueci_minha_senha" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
+
+        <include layout="@layout/content_tela_esqueci_minha_senha" />
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
