--- a/CharmeX_v03/app/src/main/res/layout/content_home.xml
+++ b/CharmeX_v03/app/src/main/res/layout/content_home.xml
@@ -1,167 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="wrap_content"
+    android:isScrollContainer="true"
+    android:nestedScrollingEnabled="true"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/lblBemVindo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="0dp"
-            android:fontFamily="@font/roboto_medium"
-            android:text="Olá, (Fulano de Tal) :)"
-            android:textAlignment="center"
-            android:textColor="@color/corRosa"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/container_pesquisa"
-            android:layout_width="378dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/lblBemVindo"
-            android:layout_alignStart="@+id/barraPesquisa"
-            android:layout_alignEnd="@+id/barraPesquisa"
-            android:layout_marginStart="-3dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="-6dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/corRosa"
-            android:gravity="center_vertical|center_horizontal"
-            android:minHeight="?attr/actionBarSize"
-            android:outlineAmbientShadowColor="@color/corPreto"
-            android:padding="0dp"
-            android:theme="?attr/actionBarTheme" />
-
-        <SearchView
-            android:id="@+id/barraPesquisa"
-            style="@android:style/Widget.Material.Light.SearchView"
-            android:layout_width="370dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/lblBemVindo"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="10dp"
-            android:backgroundTint="@color/corBranco"
-            android:foregroundTint="@color/corBranco"
-            android:gravity="top|center_vertical|center_horizontal|start"
-            android:queryBackground="@color/corBranco"
-            android:queryHint="@string/search_hint">
-
-        </SearchView>
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
         <LinearLayout
+            android:id="@+id/container_bem_vindo"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/barraPesquisa"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:background="@color/corRoxoClaro"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="20dp"
+            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp">
 
-            <TextView
-                android:id="@+id/lblRegioes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="0dp"
-                android:fontFamily="@font/roboto_medium_italic"
-                android:padding="5dp"
-                android:text="Pesquise por Regiões:"
-                android:textAlignment="textStart"
-                android:textColor="@color/corBranco"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <android.support.v4.widget.NestedScrollView
-                android:id="@+id/container_regioes"
+            <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:clipChildren="true"
-                android:clipToPadding="true"
-                android:fillViewport="true">
+                android:gravity="center_vertical|center_horizontal"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp">
 
-                <LinearLayout
-                    android:id="@+id/container_btn_regioes"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/lblBemVindo"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="2dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="2dp">
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="Olá,"
+                    android:textAlignment="center"
+                    android:textColor="@color/corPreto"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-                    <ImageButton
-                        android:id="@+id/imgBtnZonaNorte"
-                        android:layout_width="match_parent"
-                        android:layout_height="70dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="@color/corRosa"
-                        android:padding="0dp"
-                        android:scaleType="centerInside"
-                        app:srcCompat="@drawable/ic_logo_deitado10" />
+                <TextView
+                    android:id="@+id/nomeCliente"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="(Mayara Regina Bispo)"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/corBranco"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </TableRow>
 
-                    <ImageButton
-                        android:id="@+id/imgBtnZonaSul"
-                        android:layout_width="match_parent"
-                        android:layout_height="70dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="@color/corRosa"
-                        android:scaleType="centerInside"
-                        app:srcCompat="@drawable/ic_logo_deitado10" />
-
-                    <ImageButton
-                        android:id="@+id/imgBtnZonaLeste"
-                        android:layout_width="match_parent"
-                        android:layout_height="70dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="@color/corRosa"
-                        android:scaleType="centerInside"
-                        app:srcCompat="@drawable/ic_logo_deitado10" />
-
-                    <ImageButton
-                        android:id="@+id/imgBtnZonaOeste"
-                        android:layout_width="match_parent"
-                        android:layout_height="70dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="@color/corRosa"
-                        android:scaleType="centerInside"
-                        app:srcCompat="@drawable/ic_logo_deitado10" />
-
-                    <ImageButton
-                        android:id="@+id/imgBtnCentro"
-                        android:layout_width="match_parent"
-                        android:layout_height="70dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="@color/corRosa"
-                        android:scaleType="centerInside"
-                        app:srcCompat="@drawable/ic_logo_deitado10" />
-                </LinearLayout>
-            </android.support.v4.widget.NestedScrollView>
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/txtInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/container_bem_vindo"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:background="@color/corRoxoClaro"
+            android:fontFamily="@font/roboto_medium"
+            android:padding="10dp"
+            android:text="Pesquise Profissionais por Regiões:"
+            android:textAlignment="center"
+            android:textColor="@color/corBranco"
+            android:textSize="18sp"
+            android:textStyle="bold|italic" />
+
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nestedScrollInfo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/txtInfo"
+            android:layout_alignParentStart="true">
+
+            <LinearLayout
+                android:id="@+id/container_btn_regioes"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/txtInfo"
+                android:layout_alignParentStart="false"
+                android:layout_alignParentBottom="true"
+                android:background="@color/corBranco"
+                android:isScrollContainer="false"
+                android:nestedScrollingEnabled="true"
+                android:orientation="vertical"
+                android:paddingStart="20dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="20dp"
+                android:paddingBottom="10dp"
+                android:scrollbars="none">
+
+                <ImageButton
+                    android:id="@+id/imgBtnZonaNorte"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/corRosa"
+                    android:padding="0dp"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_btn_brc__zonanorte" />
+
+                <ImageButton
+                    android:id="@+id/imgBtnZonaSul"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/corRosa"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_btn_brc__zonasul" />
+
+                <ImageButton
+                    android:id="@+id/imgBtnZonaLeste"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/corRosa"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_btn_brc__zonaleste" />
+
+                <ImageButton
+                    android:id="@+id/imgBtnZonaOeste"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@color/corRosa"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_btn_brc__zonaoeste" />
+
+                <ImageButton
+                    android:id="@+id/imgBtnCentro"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/corRosa"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_btn_brc__centro" />
+
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+
     </RelativeLayout>
-</android.support.constraint.ConstraintLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
