--- a/CharmeX_v03/app/src/main/res/layout/content_tela_agendar.xml
+++ b/CharmeX_v03/app/src/main/res/layout/content_tela_agendar.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:background="@color/corBranco">
 
     <TextView
         android:id="@+id/txtTexto"
         android:layout_width="0dp"
-        android:layout_height="83dp"
+        android:layout_height="102dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="30dp"
         android:text='Preencha os campos abaixo para agendar um horário com o profissional escolhido. Seus agendamentos podem ser vistos na aba "Agendamentos", no botão central do menu. '
         android:textAlignment="viewStart"
         android:textColor="@color/corPreto"
-        android:textSize="16sp"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,9 +28,12 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="30dp"
-        android:clickable="false"
-        android:inputType="textPersonName"
+        android:editable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:inputType="none"
         android:text="(Nome da Empresa)"
+        android:textColor="@color/corCinza"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,6 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:backgroundTintMode="src_atop"
+            android:entries="@android:array/imProtocols"
             android:spinnerMode="dialog"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
