--- a/CharmeX_v03/app/src/main/res/layout/content_tela_lista_empresas.xml
+++ b/CharmeX_v03/app/src/main/res/layout/content_tela_lista_empresas.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="@color/corBranco">
 
         <ListView
-            android:id="@+id/listViewAgendamentos"
+            android:id="@+id/listViewEmpresas"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:entries="@android:array/postalAddressTypes" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
