--- a/CharmeX_v03/app/src/main/res/layout/fragment_home.xml
+++ b/CharmeX_v03/app/src/main/res/layout/fragment_home.xml
@@ -8,4 +8,10 @@
 
     <include layout="@layout/content_home"/>
 
+    <FrameLayout
+        android:id="@+id/container_listar_profissionais"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation" />
+
 </android.support.design.widget.CoordinatorLayout>
