--- a/CharmeX_v03/app/src/main/res/layout/fragment_meu_perfil_editar.xml
+++ b/CharmeX_v03/app/src/main/res/layout/fragment_meu_perfil_editar.xml
@@ -22,4 +22,10 @@
         app:fabSize="normal"
         app:srcCompat="@drawable/ic_check_black_24dp" />
 
+    <FrameLayout
+        android:id="@+id/container_fragment_meu_perfil"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/bottom_navigation"/>
+
 </android.support.design.widget.CoordinatorLayout>
