--- a/CharmeX_v03/app/src/main/res/values/colors.xml
+++ b/CharmeX_v03/app/src/main/res/values/colors.xml
@@ -8,8 +8,6 @@
     <color name="corPreto">#000000</color>
     <color name="corBranco">#ffffff</color>
     <color name="corRoxoClaro">#905fb7</color>
-    <color name="corRoxoEscuro">#5708bf</color>
-    <color name="corVerdeEscuro">#6fa649</color>
-    <color name="corAmareloEscuro">#bd8108</color>
     <color name="corRosa">#d81b60</color>
+    <color name="corCinza">#444444</color>
 </resources>
