--- a/CharmeX_v03/app/src/main/res/values/styles.xml
+++ b/CharmeX_v03/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/corRoxoEscuro</item>
+        <item name="colorPrimary">@color/corPreto</item>
         <item name="colorPrimaryDark">@color/corPreto</item>
         <item name="colorAccent">@color/corRosa</item>
     </style>
@@ -14,7 +14,5 @@
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
